--- a/App.xaml
+++ b/App.xaml
@@ -66,15 +66,6 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        
-        <Style TargetType="Button" x:Key="BlueDetailsButton">
-            <Setter Property="Padding" Value="16 8"/>
-            <Setter Property="Margin" Value="0 8 0 0"/>
-            <Setter Property="Background" Value="#409AEE"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="FontSize" Value="14"/>
-        </Style>
 
         <Style TargetType="Button" x:Key="SignInButton">
             <Setter Property="Background" Value="#409AEE"/>
@@ -83,7 +74,17 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Height" Value="30"/>
         </Style>
-        
+
+        <Style TargetType="Button" x:Key="ViewAllButton">
+            <Setter Property="Background" Value="#409AEE"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="132"/>
+        </Style>
+
+
         <Style TargetType="Label" x:Key="Title">
             <Setter Property="FontSize" Value="30"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -113,7 +114,7 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="10 0 0 0" Padding="0" HorizontalAlignment="Left"/>
+                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="20 0 0 0" Padding="0" HorizontalAlignment="Left"/>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
@@ -124,7 +125,7 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="10 0 0 0" Padding="0" HorizontalAlignment="Left"/>
+                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="20 0 0 0" Padding="0" HorizontalAlignment="Left"/>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
@@ -140,18 +141,22 @@
         </Style>
 
         <Style TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             <Setter Property="Background" Value="White" />
             <Setter Property="BorderBrush" Value="White" />
             <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="Margin" Value="10 0 0 0"/>
+            <Setter Property="Height" Value="32"/>
+            <Setter Property="Margin" Value="20 0 0 0"/>
+            <Setter Property="FontSize" Value="16"/>
             <Style.Triggers>
                 <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Background" Value="Aquamarine" />
-                    <Setter Property="Margin" Value="10 0 0 0"/>
+                    <Setter Property="Background" Value="#d1e3ed" />
+                    <Setter Property="BorderThickness" Value="0" />
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="LightBlue" />
-                    <Setter Property="Margin" Value="10 0 0 0"/>
+                    <Setter Property="Background" Value="#d1e3ed" />
+                    <Setter Property="BorderThickness" Value="0" />
+
                 </Trigger>
             </Style.Triggers>
         </Style>
