--- a/App.xaml
+++ b/App.xaml
@@ -99,6 +99,13 @@
             <Setter Property="HorizontalAlignment" Value="Right"/>
         </Style>
 
+        <Style TargetType="Label" x:Key="DetailsNameLabelLeft">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Margin" Value="10 0"/>
+        </Style>
+
         <Style TargetType="Label" x:Key="DetailsBindingLabel">
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
