--- a/View/Details/StudentDetailsWindow.xaml
+++ b/View/Details/StudentDetailsWindow.xaml
@@ -7,12 +7,51 @@
     xmlns:vm="clr-namespace:POiG_Projekt.ViewModel.Details"
       mc:Ignorable="d" 
       d:DesignHeight="640" d:DesignWidth="844"
-      Title="StidentDetails"
+      Title="StudentDetails"
       Background="White">
 
     <Window.Resources>
         <vm:StudentDetailsViewModel x:Key="ViewModel"/>
     </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="7*"/>
+        </Grid.RowDefinitions>
+        <Label x:Name="LabelTytul" Grid.Row="0" Content="{Binding Name}" Style="{StaticResource Title}"/>
+
+        <Grid Grid.Row="1" Background="#f5f5f5" Margin="80 20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="2*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Column="0" Grid.Row="0" Content="Adres e-mail:" Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelEmail" Grid.Column="1" Grid.Row="0" Content="{Binding Email}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label Grid.Column="0" Grid.Row="1" Content="Nr albumu:" Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelAlbum" Grid.Column="1" Grid.Row="1" Content="{Binding Number}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label Grid.Column="0" Grid.Row="2" Content="Grupa:" Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelGrupa" Grid.Column="1" Grid.Row="2" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label Grid.Column="0" Grid.Row="3" Content="Data rozpoczęcia studiów:" Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelDataRozpoczecia" Grid.Column="1" Grid.Row="3" Content="{Binding StartDate}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label Grid.Column="0" Grid.Row="4" Content="Średnia:" Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelSrednia" Grid.Column="1" Grid.Row="4" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label Grid.Column="0" Grid.Row="5" Content="Punkty do stypendium:" Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelPunkty" Grid.Column="1" Grid.Row="5" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label Grid.Column="0" Grid.Row="6" Content="Czy ma stypendium?" Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelStypendium" Grid.Column="1" Grid.Row="6" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label Grid.Column="0" Grid.Row="7" Content="Dodatkowe osiągnięcia: " Style="{StaticResource DetailsNameLabelLeft}"/>
+            <Label x:Name="LabelOsiagniecia" Grid.Column="1" Grid.Row="7" Style="{StaticResource DetailsBindingLabel}"/>
+        </Grid>
+
     </Grid>
 </Window>
