--- a/App.xaml
+++ b/App.xaml
@@ -75,7 +75,7 @@
             <Setter Property="Height" Value="30"/>
         </Style>
 
-        <Style TargetType="Button" x:Key="ViewAllButton">
+        <Style TargetType="Button" x:Key="BlueButton">
             <Setter Property="Background" Value="#409AEE"/>
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="BorderThickness" Value="0"/>
@@ -103,7 +103,7 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="10 0"/>
+            <Setter Property="Margin" Value="30 0"/>
         </Style>
 
         <Style TargetType="Label" x:Key="DetailsBindingLabel">
@@ -162,6 +162,27 @@
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="#d1e3ed" />
+                    <Setter Property="BorderThickness" Value="0" />
+
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style TargetType="ListViewItem" x:Key="ListViewItemNotSelected">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+            <Setter Property="Background" Value="White" />
+            <Setter Property="BorderBrush" Value="White" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Height" Value="32"/>
+            <Setter Property="Margin" Value="20 0 0 0"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="BorderThickness" Value="0" />
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="White" />
                     <Setter Property="BorderThickness" Value="0" />
 
                 </Trigger>
