--- a/View/Details/CourseDetailsWindow.xaml
+++ b/View/Details/CourseDetailsWindow.xaml
@@ -23,7 +23,7 @@
             <RowDefinition Height="8*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label x:Name="LabelTytul" Grid.Row="0" Content="{Binding Name}" Style="{StaticResource Title}"/>
+        <Label x:Name="LabelTytul" Grid.Row="0" Style="{StaticResource Title}"/>
         <Grid Grid.Row="1" Background="#f5f5f5" Height="40">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -32,13 +32,13 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Grupa:" Style="{StaticResource DetailsNameLabel}"/>
-            <Label x:Name="Grupa" Grid.Column="1" Content="{Binding Grupa}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label x:Name="Grupa" Grid.Column="1" Style="{StaticResource DetailsBindingLabel}"/>
             <Label Grid.Column="2" Content="Ilość uczestników: " Style="{StaticResource DetailsNameLabel}"/>
-            <Label x:Name="iloscUczestnikow" Grid.Column="3" Content="{Binding iloscUczestnikow}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label x:Name="iloscUczestnikow" Grid.Column="3" Style="{StaticResource DetailsBindingLabel}"/>
 
         </Grid>
-        <ListView x:Name="ListViewUczestnicy" Grid.Row="2" ItemsSource="{Binding }" Style="{StaticResource ListViewStyle}" ItemContainerStyle="{StaticResource ListViewItemNotSelected}">
-           
+        <ListView x:Name="ListViewUczestnicy" Grid.Row="2" ItemsSource="{Binding Uczestnicy, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, BindsDirectlyToSource=True}" Style="{StaticResource ListViewStyle}" ItemContainerStyle="{StaticResource ListViewItemNotSelected}">
+
             <ListView.View>
                 <GridView AllowsColumnReorder="False">
                     <GridViewColumn Width="140" Header="Imię" HeaderContainerStyle="{StaticResource ColumnHeader}">
@@ -59,7 +59,8 @@
                     <GridViewColumn Width="280" Header="Ocena końcowa" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <ComboBox x:Name="ComboBoxOcena" Style="{StaticResource ComboBox}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding Ocena.Wartosc, Mode=OneTime}">
+                                <ComboBox x:Name="ComboBoxOcena" Style="{StaticResource ComboBox}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding Path=NowaOcena, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, BindsDirectlyToSource=True}">
+                                    <ComboBoxItem>Brak</ComboBoxItem>
                                     <ComboBoxItem>2</ComboBoxItem>
                                     <ComboBoxItem>3</ComboBoxItem>
                                     <ComboBoxItem>3.5</ComboBoxItem>
@@ -70,10 +71,17 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
+                    <GridViewColumn Width="280" Header="Obecna Ocena" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding ObecnaOcena, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="Zatwierdź" Grid.Row="3" Margin="0 0 40 0" HorizontalAlignment="Right" Style="{StaticResource BlueButton}"/>
+        <Button Content="Zatwierdź" Grid.Row="3" Margin="0 0 40 0" HorizontalAlignment="Right" Style="{StaticResource BlueButton}" Command="{Binding UpdateGrades}"/>
 
     </Grid>
 </Window>
